# Photon-Neuromorphics-SDK

./: README.md  compliance_config.json  final_quality_gates.py  global_deployment_config.json  monitoring_config.json  performance_optimization_suite.py  production_deployment_suite.py  pyproject.toml  terragon_sdlc_final_report.json  test_comprehensive_functionality.py
examples/: demo.py
photon_neuro/core/: components.py
photon_neuro/quantum/: error_correction.py
src/photon_neuromorphics/: __init__.py  network.py  neuron.py  router.py  spike.py  synapse.py
tests/: test_photon_neuromorphics.py
